bugfix overflow

--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,7 @@ main{
 
 .main-content{
     width: 100%;
-    height: 100%;
+    height: calc(100% - 100px);
     overflow-y: scroll;
 }
 
@@ -39,6 +39,7 @@ footer{
     position: fixed;
     left: 0;
     bottom: 0;
+    z-index: 1;
 }
 
 .button{
@@ -116,7 +117,6 @@ footer{
 .add-playlist span{
     margin-left: 30px;
 }
-
 .color-white:hover{
     color: white;
     border-left: 1px solid greenyellow;
@@ -174,7 +174,6 @@ footer{
 
 
 .content{
-    height: 100%;
     width: 100%;
     background-color: rgb(0, 103, 238);
     
@@ -219,7 +218,6 @@ footer{
     margin: 20px 0;
     display: flex;
     flex-wrap: wrap;
-    overflow: auto;
 }
 
 .track-played{
